--- a/requirements-npu.txt
+++ b/requirements-npu.txt
@@ -5,6 +5,6 @@ decorator
 pyyaml
 scipy
 setuptools
-torch_npu == 2.1.0.post6
+# torch_npu == 2.1.0.post6
 # torch == 2.4.0
 # torch_npu == 2.4.0.rc1
